# auto-prdgen

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.py  prd_creator.py  prompts.py  requirements.txt  setup.py  ui_utils.py
.trae/rules/: project_rules.md
mcp-auto-prdgen-server/: README.md  pyproject.toml  start_server.bat  start_server.ps1
mcp-auto-prdgen-server/scripts/: install.py
mcp-auto-prdgen-server/src/mcp_auto_prdgen_server/: __init__.py  client.py  server.py
output/: .gitkeep
