[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-auto-prdgen-server"
version = "0.1.0"
description = "MCP server for auto-prdgen command execution and management"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "google-generativeai",
    "python-dotenv",
    "colorama>=0.4.4",
    "aiofiles",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy"
]

[project.scripts]
mcp-auto-prdgen-server = "mcp_auto_prdgen_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_auto_prdgen_server"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black" 